<resources>
    <string name="app_name">prototype</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="compass_accuracy_low">Please re-calibrate compass by waving your device in a figure 8 motion.</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Debug -->
    <string name="debug_tag">AMMAR</string>

    <string name="leap_endpoint">ws://100.65.93.94:8889</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="ModuleSelectionName">Module Selection</string>

    <!-- STRINGS RELATED TO MODULE SELECTION -->
    <string name="Button1">Complete Assembly</string>
    <string name="Button2">Sub-Assembly</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sub_assembly">Sub-Assembly</string>


    <!-- STRINGS RELATED TO SUB_ASSEMBLY SELECTION -->
    <string name="assemblies">Assemblies</string>
    <string name="adjustments">Adjustments</string>
    <string name="tests">Tests</string>
    <string name="next">Next</string>
    <string name="button1">Main Landing Gear Actuator</string>
    <string name="button2">Main Landing Gear Door</string>
    <string name="button3">Upclock</string>
    <string name="button4">Upclock Actuator</string>
    <string name="button5">Wheel</string>
    <string name="button6">Wheel Door Actuator</string>
    <string name="button7">Break System</string>
    <string name="button8">Wheel Door Actuator Spigot</string>
    <string name="button9">Door Link</string>
    <string name="button10">Leg Door</string>
    <string name="button11">Side Stay</string>
    <string name="button12">Door Latch Mechanism  </string>
    <string name="button13">Park Break Control </string>
    <string name="button14">Brake, Master Cylinder </string>
    <string name="button15">Bleeding And Functional </string>


    <!-- STRINGS RELATED TO GET_INSTRUCTIONS SELECTION -->

    <string name="title_activity_get_instructions">Instructions</string>

    <string name="section_format">Instruction : %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_list_view">listView</string>
    <string name="title_activity_task">task</string>
    <string name="title_activity_instructions">instructions</string>
    <string name="finishPopUp">Congratulations, you have completed this assembly! \n\n\ Swipe Left:\n to go back to the Main Menu \n\n Swipe Right:\n to Keep Working.</string>
    <string name="finish">Main Menu</string>
    <string name="back">Keep working</string>

</resources>
