<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aps490.drdc.prototype.sub_assembly"
    tools:showIn="@layout/activity_sub_assembly">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
        <LinearLayout
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:weightSum="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/assemblies"
                android:gravity="center"
                android:id="@+id/textView2"
                android:textColor="@color/white"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button1"
                    android:id="@+id/button1"
                    android:gravity="center"
                    android:onClick="openGetInstructions"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button2"
                    android:id="@+id/button2"
                    android:gravity="center"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button3"
                    android:id="@+id/button3"
                    android:gravity="center"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button4"
                    android:id="@+id/button4"
                    android:gravity="center"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button5"
                    android:id="@+id/button5"
                    android:gravity="center"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button6"
                    android:id="@+id/button6"
                    android:gravity="center"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button7"
                    android:id="@+id/button7"
                    android:gravity="center"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button8"
                    android:id="@+id/button8"
                    android:gravity="center"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button9"
                    android:id="@+id/button9"
                    android:gravity="center"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:weightSum="1">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/adjustments"
                    android:id="@+id/textView6"
                    android:gravity="center"
                    />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button10"
                    android:id="@+id/button10"
                    android:gravity="center"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button11"
                    android:id="@+id/button11"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/adjustments"
                    android:id="@+id/textView7"
                    android:gravity="center"
                    />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/adjustments"
                android:id="@+id/textView3"
                android:gravity="center"
                android:textColor="@color/white"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button12"
                    android:id="@+id/button12"
                    android:gravity="center"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button13"
                    android:id="@+id/button13"
                    android:gravity="center"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button14"
                    android:id="@+id/button14"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tests"
                    android:id="@+id/textView5"
                    android:gravity="center" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tests"
                    android:id="@+id/textView4"
                    android:gravity="center"
                    android:textColor="@color/white"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button15"
                    android:id="@+id/button15"
                    android:gravity="center"/>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
